2006-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/29637
	* gcc.dg/pr29637.c: New test.

2006-10-27  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/29563
	* gfortran.dg/arrayio_9.f90: New test.
	* gfortran.dg/arrayio_19.f90: New test.

2006-10-26  Andreas Krebbel  <krebbel1@de.ibm.com>

	* gcc.dg/20061026.c: New testcase.

2006-10-25  Steve Ellcey  <sje@cup.hp.com>

	* gcc.dg/pthread-init-2.c: Define _POSIX_C_SOURCE on ia64 HP-UX.

2006-10-25  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.dg/simd-5.c, gcc.dg/simd-6: New testcases.

2006-10-24  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/29393
	* gfortran.dg/initialize_2.f90: New.

2006-10-24  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29284
	* gfortran.dg/optional_assumed_charlen_1.f90: New test.

	PR fortran/29321
	PR fortran/29322
	* gfortran.dg/missing_optional_dummy_2.f90: New test.

	PR fortran/25091
	PR fortran/25092
	* gfortran.dg/entry_array_specs_1.f90: New test.

2006-10-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29020
	* g++.dg/template/friend48.C: New test.

2006-10-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* g++.dg/other/s390-1.C: New testcase.

2006-10-22  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20647
	* g++.dg/abi/rtti3.C: New.

2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/div-compare-1.c: New test.

2006-10-19 Ira Rosen  <irar@il.ibm.com>

	Backport from mainline:
        2006-08-07  Victor Kaplansky <victork@il.ibm.com>
        
        PR tree-optimizations/26969
        * gcc.dg/vect/vect.exp: Compile tests prefixed with
        "unswitch-loops" with -funswitch-loops.
        * gcc.dg/vect/unswitch-loops-pr26969.c: New test.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-25  Richard Guenther  <rguenther@suse.de>

	PR testsuite/28829
	* gcc.dg/pr26570.c: Fix testcase.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-16  Zdenek Dvorak <dvorakz@suse.cz>
